tests/baselines/reference/project/intReferencingExtAndInt/node/intReferencingExtAndInt.errors.txt
internal2.ts(2,21): error TS1147: Import declarations in a namespace cannot reference a module.


==== external2.ts (0 errors) ====
    export function square(x: number) {
    	return (x * x);
    }
==== internal2.ts (1 errors) ====
    module outer {
    	import g = require("external2")
    	                   ~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
    	export var a = g.square(5);
    	export var b = "foo";
    }